Fix style: when updating a text with an empty text: the text is now visible and the input keep his style

--- a/src/style/components/_button.scss
+++ b/src/style/components/_button.scss
@@ -23,6 +23,7 @@
         top: 120%;
         z-index: 1;
 
+        width: max-content;
         padding: 3px 10px;
 
         border: 1px solid $lighter-dark;
