--- a/src/style/components/_updateTodoForm.scss
+++ b/src/style/components/_updateTodoForm.scss
@@ -1,4 +1,5 @@
 .updateTodo {
+  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
@@ -16,10 +17,35 @@
     border-bottom: 1px solid lighten($medium, 42%);
 
     font-style: italic;
+
+    &--error {
+      border-color: lighten($error, 40%);
+    }
   }
 
   &__btns {
     display: flex;
     gap: 2px;
+
+    & button {
+      color: $dark;
+    }
+  }
+
+  &__tooltip {
+    position: absolute;
+    left: 50%;
+    bottom: -120%;
+    translate: -50% 0;
+    position: absolute;
+    z-index: 1;
+
+    width: max-content;
+    padding: 3px 10px;
+
+    border: 1px solid darken($lighter-dark, 5%);
+    border-radius: 8px;
+
+    background-color: lighten($main-bg, 5%);
   }
 }
