--- a/src/style/index.css
+++ b/src/style/index.css
@@ -130,6 +130,9 @@ h2 {
   position: absolute;
   top: 120%;
   z-index: 1;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
   padding: 3px 10px;
   border: 1px solid #e7e7e7;
   border-radius: 8px;
@@ -367,6 +370,7 @@ h2 {
 }
 
 .updateTodo {
+  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
@@ -381,9 +385,30 @@ h2 {
   border-bottom: 1px solid rgba(221, 220, 229, 0.8);
   font-style: italic;
 }
+.updateTodo__input--error {
+  border-color: #ffa8a8;
+}
 .updateTodo__btns {
   display: flex;
   gap: 2px;
+}
+.updateTodo__btns button {
+  color: #3b3663;
+}
+.updateTodo__tooltip {
+  position: absolute;
+  left: 50%;
+  bottom: -120%;
+  translate: -50% 0;
+  position: absolute;
+  z-index: 1;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  padding: 3px 10px;
+  border: 1px solid #dadada;
+  border-radius: 8px;
+  background-color: #fdfdfd;
 }
 
 .add-todo {
@@ -606,6 +631,12 @@ h2 {
 #dark .updateTodo__input {
   background-color: inherit;
   color: #e9e9e9;
+}
+#dark .updateTodo__btns button {
+  color: #e9e9e9;
+}
+#dark .updateTodo__tooltip {
+  color: #3b3663;
 }
 
 #dark .dropdown {
